# usb_fpga_displ

./: README.md
fpga_code/: Makefile  top.v  wires.pcf
pc_code/: demo.c  send_img.c
pc_code/lib_ssd1331/: CMakeLists.txt  README.md
pc_code/lib_ssd1331/include/: ftdi_util.h  ssd_displ.h  ssd_displ_graph.h
pc_code/lib_ssd1331/src/: ftdi_util.c  ssd_displ.c  ssd_displ_graph.c
